# odd-collector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  collector_config.yaml  config.yaml  domain_classes.plantuml  pyproject.toml  start.sh
.github/workflows/: build.yaml  build_dev.yaml  build_latest.yaml  create_pypi_package.yaml  latest_tag.yaml  release-build.yaml  release-drafter.yaml
config_examples/: airbyte.yaml  cassandra.yaml  ckan.yaml  clickhouse.yaml  cocroachdb.yaml  couchbase.yaml  cubejs.yaml  databricks_lakehouse.yaml  databricks_unity_catalog.yaml  dbt.yaml  druid.yaml  duckdb.yaml  elasticsearch.yaml  feast.yaml  fivetran.yaml  hive.yaml  kafka.yaml  kubeflow.yaml  metabase.yaml  mlflow.yaml  mongodb.yaml  mssql.yaml  mysql.yaml  neo4j.yaml  odbc.yaml  odd_adapter.yaml  oracle.yaml  postgresql.yaml  presto.yaml  redash.yaml  redshift.yaml  scylladb.yaml  singlestore.yaml  snowflake.yaml  sqlite.yaml  superset.yaml  tableau.yaml  tarantool.yaml  trino.yaml  vertica.yaml
docker/: .env  docker-compose.yml  testodbc.yaml
odd_athena_adapter/: adapter.py
odd_athena_adapter/mappers/: __init__.py  metadata.py  tables.py  types.py
odd_athena_adapter/mappers/columns/: __init__.py
odd_aws_collector/: __main__.py  config.py
odd_aws_collector/adapters/athena/: adapter.py
odd_aws_collector/adapters/dynamodb/: adapter.py
odd_aws_collector/adapters/glue/: adapter.py
odd_aws_collector/adapters/quicksight/: adapter.py
odd_aws_collector/adapters/s3/: adapter.py
odd_aws_collector/adapters/sagemaker_featurestore/: adapter.py
odd_aws_collector/domain/: adapters_initializer.py  collector.py  collector_config.py  paginator_config.py  plugin.py  register_datasource_request.py
odd_aws_collector/services/: datasource_api.py
odd_aws_collector/tests/: collector_config.yaml  test_module_importer.py
odd_collector/: __init__.py  __main__.py  __version__.py  cache.py  config.py  controllers.py  main.py  module_importer.py  scheduler.py  version.py  wsgi.py
odd_collector/adapters/: trino
odd_collector/adapters/airbyte/: adapter.py  api.py  logger.py
odd_collector/adapters/athena/: adapter.py
odd_collector/adapters/cassandra/: adapter.py  config.py  generator.py  repository.py
odd_collector/adapters/ckan/: adapter.py  client.py  utils.py
odd_collector/adapters/clickhouse/: adapter.py  clickhouse_repository.py  exception.py  logger.py  repository.py
odd_collector/adapters/cockroachdb/: adapter.py  connectors.py  repository.py
odd_collector/adapters/couchbase/: README.md  adapter.py  models.py  repository.py
odd_collector/adapters/cubejs/: adapter.py  generator.py  logger.py  repository.py
odd_collector/adapters/databricks/: adapter.py  client.py
odd_collector/adapters/databricks_lakehouse/: adapter.py  client.py
odd_collector/adapters/dbt/: adapter.py
odd_collector/adapters/druid/: adapter.py  client.py  generator.py  logger.py  path_model.py
odd_collector/adapters/duckdb/: adapter.py  client.py
odd_collector/adapters/dynamodb/: adapter.py
odd_collector/adapters/elasticsearch/: adapter.py  client.py
odd_collector/adapters/feast/: adapter.py
odd_collector/adapters/fivetran/: README.md  adapter.py  helpers.py  logger.py  repository.py
odd_collector/adapters/glue/: adapter.py
odd_collector/adapters/hive/: README.md  adapter.py  client.py
odd_collector/adapters/kafka/: adapter.py  kafka_generator.py  readme.md
odd_collector/domain/: adapter.py  adapters_initializer.py  collector.py  collector_config.py  collector_config_loader.py  database_enitites_extractor.py  plugin.py  predefined_data_source.py  utils.py
odd_collector/helpers/: __init__.py  bytes_to_str.py  datatime_from_timestamp.py  datetime.py  datetime_from_ms.py  flatdict.py  logging_exception.py  lower_key_dict.py
odd_collector/models/: __init__.py  column.py  table.py
odd_collector/tests/: collector_config.yaml  config.yaml  test_module_importer.py
odd_dynamodb_adapter/: adapter.py  metadata.py
odd_generic_collector/: __main__.py
odd_generic_collector/domain/: adapter.py  adapters_folder_meta.py  collector.py  collector_config.py  plugin.py
odd_generic_collector/services/: http_client.py
odd_generic_collector/tests/: test_module_importer.py
odd_glue_adapter/: adapter.py
odd_glue_adapter/mappers/: tables.py
odd_s3_adapter/: adapter.py
odd_s3_adapter/mapper/: dataset.py
odd_s3_adapter/schema/: s3_parquet_schema_retriever.py
tests/: test_kafka.py
tests/helpers/: test_lower_key_dict.py
tests/integration/: helpers.py  test_clickhouse.py  test_cockroachdb.py  test_mssql.py  test_mysql.py  test_oracle.py  test_postgres.py
(+556 files in other folders)
