[tool.poetry]
name = "odd-collector"
version = "0.1.6"
description = "ODD Collector"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
homepage = "https://github.com/opendatadiscovery/odd-collector"
repository = "https://github.com/opendatadiscovery/odd-collector"



[tool.poetry.dependencies]
cassandra-driver = "3.25.0"
clickhouse-driver = "0.2.3"
confluent-kafka = "1.9.2"
elasticsearch = "7.14.0"
feast = "0.21.2"
funcy = "1.17"
hive-metastore-client="1.0.9"
kfp = "1.8.12"
lark-parser="0.11.1"
more-itertools = "8.13.0"
mysql-connector-python = "8.0.28"
neo4j = "4.3.7"
oddrn-generator = "^0.1.23"
odd-collector-sdk = "^0.3.2"
psycopg2-binary = "2.9.3"
python = "^3.9.1"
pyhumps = "3.0.2"
pyodbc = "4.0.32"
pytz = "2022.1"
pytest = "7.1.2"
pymongo = {extras = ["srv"], version = "4.0.2"}
snowflake-connector-python = "2.4.1"
tableauserverclient = "0.19.0"
tarantool = "0.8.0"
vertica-python = "1.1.1"
presto-python-client = "0.8.2"
trino = "0.315.0"
odd-models = "2.0.10"
pymssql = "^2.2.5"

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
