[tool.poetry]
name = "odd-collector"
version = "0.1.18"
description = "ODD Collector"
authors = ["Open Data Discovery <pypi@opendatadiscovery.org>"]
keywords = ["Open Data Discovery", "Metadata", "Data Discovery", "Data Observability"]
homepage = "https://github.com/opendatadiscovery/odd-collector"
repository = "https://github.com/opendatadiscovery/odd-collector"



[tool.poetry.dependencies]
boto3 = "1.26.32"
cassandra-driver = "3.25.0"
confluent-kafka = "1.9.2"
elasticsearch = "7.14.0"
feast = "0.29.0"
funcy = "^2.0"
flatdict = "4.0.1"
hive-metastore-client = "1.0.9"
lark-parser = "^0.12.0"
more-itertools = "8.13.0"
mysql-connector-python = "^8.0.32"
neo4j = "4.3.7"
oracledb = "1.2.1"
oddrn-generator = "^0.1.82"
psycopg2-binary = "2.9.3"
python = "^3.9"
pyhumps = "3.0.2"
pyodbc = "4.0.35"
pymongo = { extras = ["srv"], version = "4.0.2" }
presto-python-client = "0.8.2"
pymssql = "2.2.7"
snowflake-connector-python = "^2.9"
sqlalchemy = "^1.4.45"
tableauserverclient = "0.19.0"
tarantool = "0.8.0"
trino = "0.315.0"
vertica-python = "1.1.1"
pyaml-env = "^1.2.1"
pytz = "^2022.7"
fastavro = "^1.7.1"
llvmlite = "^0.39.1"
numba = "^0.56.4"
mlflow = "^2.2.2"
sql-metadata = "^2.6.0"
odd-collector-sdk = "^0.3.40"
clickhouse-connect = "^0.5.14"
odd-models = "^2.0.28"
couchbase = "^4.1.3"
pyhive = {version = "^0.6.5", extras = ["hive"]}
duckdb = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^22.1.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pymysql = "^1.0.3"
isort = "^5.12.0"
testcontainers = {extras = ["oracle", "postgres"], version = "^3.7.1"}
clickhouse-driver = "0.2.5"


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration",
]